2005-09-01  Sven Panne  <sven.panne@aedion.de>

	* src/alutError.c, src/alutInit.c, src/alutLoader.c,
	src/alutVersion.c, src/alutWaveform.c,
	test_suite/test_errorstuff.c, test_suite/test_fileloader.c,
	test_suite/test_memoryloader.c, test_suite/test_retrostuff.c,
	test_suite/test_version.c, test_suite/test_waveforms.c:
	Reformatted conforming to GNU standards. Please keep it that
	way...

	* Makefile.am: Added a target "permissions" to fix the broken
	permissions after a checkout. Added a target "indent" to
	automagically indent all C sources and headers according to GNU
	standards.

	* .indent.pro: Added.

	* doc/alut.html, include/AL/alut.h, src/alutError.c,
	src/alutInit.c, src/alutLoader.c, test_suite/test_memoryloader.c,
	test_suite/test_retrostuff.c: A bunch of API cleanups:

	Changed the first parameter of alutInit and alutInitWithoutContext
	to int*, not ALint*. argc is an int, after all.

	Changed return type of alutGetError to ALenum, this is more
	consistent with alGetError.

	Changed the argument of alutGetErrorString to ALenum for the same
	reason.

	Changed the first parameter of alutLoadMemoryFromFileImage and
	alutCreateBufferFromFileImage to "const ALvoid*", this is more
	convenient and more consistent with alBufferData.

	Changed the first parameter of alutLoadWAVFile and
	alutLoadWAVMemory back to ALbyte*, like it was before.

	Changed the frequency parameter of alutLoadMemoryFromFile and
	alutLoadMemoryFromFileImage to an ALuint*, this is more consistent
	with the way AL handles frequencies.

	Changed the return type of alutLoadMemoryFromFile and
	alutLoadMemoryFromFileImage to an ALvoid* for more consistency.

	* doc/alut.html: Added myself. Fixed a few typos and synched
	examples with actual sources. Use code formatting conforming to
	the GNU coding standards.

	* AUTHORS: Added myself.

	* doc/alut.html: Converted spec to XHTML + CSS, no changes to the
	content itself. This is a first step towards using DocBook, which