@@ -1,7 +1,12 @@
 #include <stdlib.h>
 #include <stdio.h>
-#include <unistd.h>
 #include <AL/alut.h>
+
+#if defined(_WIN32)
+#define sleep(x) Sleep(1000*(x))
+#else
+#include <unistd.h>
+#endif
 
 /*
   This program loads and plays a variety of files.
@@ -13,13 +18,14 @@ main (int argc, char **argv)
   ALuint file1Buffer, file1Source;
   ALuint file2Buffer, file2Source;
   ALuint file3Buffer, file3Source;
+  int i;
 
   alutInit (&argc, argv);
 
   file1Buffer = alutCreateBufferFromFile ("file1.wav");
   if (file1Buffer == 0)
     {
-      fprintf (stderr, "Error loading wav file: '%s'\n",
+      fprintf (stderr, "Error loading .wav file: '%s'\n",
 	       alutGetErrorString (alutGetError ()));
       exit (EXIT_FAILURE);
     }
@@ -41,7 +47,7 @@ main (int argc, char **argv)
   file3Buffer = alutCreateBufferFromFile ("file3.raw");
   if (file3Buffer == 0)
     {
-      fprintf (stderr, "Error loading .ub file: '%s'\n",
+      fprintf (stderr, "Error loading .raw file: '%s'\n",
 	       alutGetErrorString (alutGetError ()));
       exit (EXIT_FAILURE);
     }
@@ -49,7 +55,7 @@ main (int argc, char **argv)
   alGenSources (1, &file3Source);
   alSourcei (file3Source, AL_BUFFER, file3Buffer);
 
-  while (1)
+  for (i = 0; i < 3; i++)
     {
       alSourcePlay (file1Source);
       sleep (1);
